# fff

./: pyproject.toml
src/: main.py
src/data/: creature.py  explorer.py  init.py
src/fake/: creature.py
src/service/: creature.py  explorer.py
src/test/unit/data/: test_creature.py  test_explorer.py
src/test/unit/service/: test_creature.py
src/web/: creature.py  explorer.py
